--- a/index.html
+++ b/index.html
@@ -428,6 +428,16 @@
             </li>
           </ul>
         </div>
+        <form class="footer-email-form" autocomplete="off">
+          <b class="footer-email-form-text">Подпишитесь на рассылку</b>
+          <input type="email" name="email" placeholder="E-mail" class="footer-email-form-input form-reset-input transitions">
+          <button type="submit" class="footer-email-form-btn button transitions">
+            <svg width="24" height="24" class="footer-email-form-icon">
+              <use href="./images/icons.svg#icon-send"></use>
+            </svg>Подписаться
+          </button>
+        </form>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
