--- a/index.html
+++ b/index.html
@@ -442,6 +442,42 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
+        <form class="form-modal" autocomplete="off">
+          <p class="form-modal-title">Оставьте свои данные, мы вам перезвоним</p>
+          <label class="form-field">
+            <span class="form-field-name">Имя</span>
+            <input type="text" name="name" class="form-input form-reset-input">
+            <svg width="18" height="18" class="form-modal-input-icon">
+              <use href="./images/icons.svg#icon-name"></use>
+          </svg>
+          </label>
+          <label class="form-field">
+            <span class="form-field-name">Телефон</span>
+            <input type="tel" name="tel" class="form-input form-reset-input">
+            <svg width="18" height="18" class="form-modal-input-icon">
+              <use href="./images/icons.svg#icon-phone"></use>
+          </svg>
+          </label>
+          <label class="form-field">
+            <span class="form-field-name">Почта</span>
+            <input type="email" name="email" class="form-input form-reset-input">
+            <svg width="18" height="18" class="form-modal-input-icon">
+              <use href="./images/icons.svg#icon-email"></use>
+          </svg>
+          </label>
+          <label class="form-field">
+            <span class="form-field-name">Комментарий</span>
+            <textarea name="comment" class="form-textarea form-reset-input" placeholder="Введите текст"></textarea>
+          </label>
+          <label class="form-checkbox">
+            <input type="checkbox" name="checkbox" class="form-checkbox-input visually-hidden">
+            <span class="castom-check"><svg width="11" height="8"><use href="./images/icons.svg#icon-check"></use></svg></span>
+            <span class="form-checkbox-name">Соглашаюсь с рассылкой и принимаю <a href="" class="policy-link">Условия договора</a></span>
+          </label>
+          <button type="submit" class="form-send-btn button transitions">
+            Отправить
+          </button>
+        </form>
         <button type="button" class="modal-close-btn transitions" data-modal-close>
           <svg width="18" height="18">
             <use href="./images/icons.svg#icon-close"></use>
