Корректирует после замечаний ментора

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
               <use href="./images/icons.svg#icon-email"></use>
           </svg>
           </label>
-          <label class="form-field">
+          <label class="form-field form-field-textarea">
             <span class="form-field-name">Комментарий</span>
             <textarea name="comment" class="form-textarea form-reset-input" placeholder="Введите текст"></textarea>
           </label>
